@@ -36,7 +36,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'
-    implementation 'org.springframework:spring-jdbc:6.1.11'
+    implementation 'org.springframework:spring-jdbc:6.1.12'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
